    * Some low-level performance improvements to BUILD file parsing (#3147, #3152)
    * Support \t escapes in strings (#3170)
    * Remove mention of pleasings from plz init message (#3173)
    * Report remote worker name in interactive output (#3178)
    * New `no_test_coverage` option to explicitly opt tests out of producing coverage (#3188)

Version 17.8.7
--------------
    * Use local paths only for determining tool changes (#3139)
    * Use parser.open rather than os.Open avoiding a panic when using remotefs
      (#3030)
    * Plz help shows halp for aliases (#3130)

Version 17.8.6
--------------
    * Speed up parsing of subrepo-heavy repos (notably `go_repo`) (#3126)
    * Query commands take subrepos into account (#3124)

Version 17.8.5
--------------
    * Revert #3111

Version 17.8.4
--------------
    * Fix a nil pointer when querying targets with the `--arch` flag (#3113)
    * Improved output for downloading test outputs (#3112)
    * Only download child dirs for filegroups where necessary (#3111)
    * Minor parse time performance improvements (#3114)

Version 17.8.3
--------------
    * Don't re-parse subrepos unnecessarily (#3103)
    * Added some gRPC client metrics (#3104)
    * Add a check in parser on unary operator precedence (#3106)
    * Various third-party library updates (#3097, #3098)

Version 17.8.2
--------------
    * Empty values in some .plzconfig sections now correctly generate keys again (#3095)

Version 17.8.1
--------------
    * Allow lists to be passed to subinclude() (#3080)
    * `plz query inputs` now outputs in sorted order, and doesn't output intermediate targets from subrepos (#3073)
    * Some fixes to operator precedence (#3088)
    * Test runs are correctly set for remote execution (#3090)
    * Fix calculation of cache size when using compression (#3055)

Version 17.8.0
--------------
    * Add a --ignore_unknown flag to query whatinputs (#3057)
    * Improve somepath --hidden behaviour (#3067)